--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,4 +41,6 @@ jobs:
         cd tests
         pwd
         pip list
+        python -m pip list
+        python -c "import wickedtree.utils.printing"
         pytest
